# myCode

./: .gitignore  AGENTS.md  README.md  checklist.md  pyproject.toml  spec.md  tasks.md
doc/stage-01-pure-chat-tui/: checklist.md  runtime-flow.md  spec.md  tasks.md
doc/stage-02-tool-system/: checklist.md  plan.md  spec.md  task.md
doc/stage-03-agent-loop/: checklist.md  plan.md  spec.md  task.md
doc/stage-04-prompt-context/: checklist.md  plan.md  spec.md  task.md
doc/stage-05-permission-system/: checklist.md  plan.md  spec.md  (+1 more)
examples/: mycode.anthropic.yaml  mycode.mcp.yaml  mycode.openai-chat.yaml  mycode.openai-responses.yaml  mycode.permissions.yaml
tests/: helpers.py  mcp_helpers.py  test_agent_events.py  test_agent_interceptor.py  test_agent_loop.py  test_agent_plan_only.py  test_agent_scheduler.py  test_anthropic_protocol.py  test_cli.py  test_compact_archive.py  test_compact_estimator.py  test_compact_light.py  test_compact_manager.py  test_compact_summary.py  test_compact_summary_prompt.py  test_config.py  test_context_compaction_e2e.py  test_dev_launcher.py  test_docs.py  test_e2e_chat.py  test_llm_base.py  test_mcp_config.py  test_mcp_jsonrpc.py  test_mcp_models.py  test_mcp_pool.py  test_mcp_stdio.py  test_mcp_streamable_http.py  test_mcp_tools.py  test_memory.py  test_memory_instructions.py  test_memory_manager.py  test_memory_models.py  test_memory_note_prompt.py  test_memory_notes.py  test_memory_paths.py  test_memory_sessions.py  test_memory_tools.py  test_openai_chat_protocol.py  test_openai_responses_protocol.py  test_permission_command.py  (+19 more)
(+90 files in other folders)
