[project]
name = "mycode"
version = "0.1.0"
description = "A terminal AI coding assistant."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mycode = "mycode.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
